--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -70,8 +70,8 @@
         <li id="client_buy"><a class="waves-effect" href="https://shop.kyani.net/login/?country=MEXICO&language=108&sponsor=1391786">
             <i class="material-icons">shopping_cart</i>Comprar</a></li>
         <li id="partner_login"><a class="waves-effect" href="#!"><i class="material-icons">work</i>Soy Socio</a></li>
-        <li><div class="divider"></div></li>
-        <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
+        <!-- <li><div class="divider"></div></li> -->
+        <!-- <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li> -->
     </ul>
 
     <nav>
