--- a/platforms/browser/www/videos.html
+++ b/platforms/browser/www/videos.html
@@ -63,8 +63,8 @@
         </li>
 
 
-        <li><div class="divider"></div></li>
-        <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li>
+        <!-- <li><div class="divider"></div></li> -->
+        <!-- <li id="app_exit"><a class="waves-effect" href="#!"><i class="material-icons">settings_power</i>Salir</a></li> -->
         <li><div class="divider"></div></li>
         <li id="app_logout"><a class="waves-effect" href="#!"><i class="material-icons">power_settings_new</i>Cerrar Sesión</a></li>
     </ul>
